# LychrelFinder

./: .gitignore  Cargo.toml  README.md
benches/: record_hunt_benchmark.rs
src/: checkpoint.rs  io_utils.rs  lib.rs  lychrel.rs  main.rs  record_checkpoint.rs  record_hunt.rs  search.rs  search_checkpoint.rs  seed_generator.rs  thread_cache.rs  verify.rs
tests/: integration_tests.rs  thread_cache_tests.rs
