[package]
name = "lychrel-finder"
version = "0.1.0"
edition = "2021"
authors = ["Sylvain"]

[dependencies]
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
mimalloc = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "lychrel-finder"
path = "src/main.rs"

[[bin]]
name = "record_hunt_benchmark"
path = "benches/record_hunt_benchmark.rs"

[lib]
name = "lychrel_finder"
path = "src/lib.rs"
